# shapool-client

./: MANIFEST.in  Makefile  README.md  setup.cfg
src/shapool/: __main__.py  shapool.py  stratum.py
