# https://packaging.python.org/tutorials/packaging-projects/
[metadata]
name = shapool
version = 1.0.0 
author = Jon Kivinen
author_email = pypi+shapool@fourside.io
description = A stratum (v1) mining client that interfaces with an icepool cluster (https://github.com/jkiv/icepool-board) running shapool-core (https://github.com/jkiv/shapool-core).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkiv/shapool-client/
project_urls =
    Bug Tracker = https://github.com/jkiv/shapool-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux

[options]
install_requires=
    icepool>0
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
